# Mandelbrot

./: .gitignore  CMakeLists.txt  Makefile  Mandelbrot  README.md
inc/: Mandelbrot.h
src/: Mandelbrot.cpp  main.cpp
